// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRouterLink should render correctly with a "className" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-router-link my-custom-class-1 my-custom-class-2"
    href="/home"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`BpkRouterLink should render correctly with a "to" attribute 1`] = `
<DocumentFragment>
  <a
    class="bpk-router-link"
    href="/home"
  >
    Link
  </a>
</DocumentFragment>
`;

exports[`BpkRouterLink should render correctly with arbitrary attributes 1`] = `
<DocumentFragment>
  <a
    class="bpk-router-link"
    href="/home"
    target="_blank"
  >
    Link
  </a>
</DocumentFragment>
`;
